RobotController/syntax.output
Terminals unused in grammar

   SPACE
   COMMENT
   ERROR


Grammar

    0 $accept: Var_Prog $end

    1 Var_Prog: Var Prog

    2 Var: LC DefinitionList RC
    3    | LC RC

    4 DefinitionList: Definition DefinitionList
    5               | Definition

    6 Definition: id COLON TYPE ASSIGN type

    7 type: id
    8     | intgr
    9     | flt
   10     | MINUS intgr
   11     | MINUS flt
   12     | str
   13     | bl
   14     | axisPos
   15     | cartPos
   16     | cartSys
   17     | cartRefSys
   18     | dynamic

   19 real: intgr
   20     | flt
   21     | MINUS intgr
   22     | MINUS flt

   23 axisPos: robAxisPos RP
   24        | robAxisPos auxAxisPos RP

   25 cartPos: robCartPos RP
   26        | robCartPos auxAxisPos RP

   27 robAxisPos: a1 real a2 real a3 real a4 real a5 real a6 real

   28 robCartPos: x real y real z real a real b real c real mode intgr

   29 auxAxisPos: aux1 real
   30           | aux1 real aux2 real
   31           | aux1 real aux2 real aux3 real
   32           | aux1 real aux2 real aux3 real aux4 real
   33           | aux1 real aux2 real aux3 real aux4 real aux5 real

   34 cartSys: x real y real z real a real b real c real RP

   35 cartRefSys: baseRefSys World x real y real z real a real b real c real RP
   36           | baseRefSys id x real y real z real a real b real c real RP

   37 dynamic: velAxis real accAxis real decAxis real jerkAxis real velPath real accPath real decPath real jerkPath real velOri real accOri real decOri real jerkOri real RP

   38 Prog: LC StatementList RC
   39     | LC RC

   40 StatementList: Statement StatementList
   41              | Statement

   42 Statement: PTP_stm
   43          | Lin_stm
   44          | Circ_stm
   45          | PTPRel_stm
   46          | LinRel_stm
   47          | StopRobot_stm
   48          | RefRobotAxis_stm
   49          | RefRobotAxisAsync_stm
   50          | MoveRobotAxis_stm
   51          | Dyn_stm
   52          | Dynovr_stm
   53          | Ramp_stm
   54          | Refsys_stm
   55          | Tool_stm
   56          | WaitTime_stm
   57          | Stop_stm
   58          | Notice_stm
   59          | Warning_stm
   60          | Error_stm
   61          | CALL_stm
   62          | WAIT_stm
   63          | IF_stm
   64          | WHILE_stm
   65          | LOOP_stm
   66          | RUN_stm
   67          | KILL_stm
   68          | RETURN_stm
   69          | GOTO_stm
   70          | LABEL_stm
   71          | ASSIGN_stm

   72 PTP_stm: PTP LP id RP
   73        | PTP LP id COMMA id RP

   74 Lin_stm: Lin LP id RP
   75        | Lin LP id COMMA id RP

   76 Circ_stm: Circ LP id COMMA id RP
   77         | Circ LP id COMMA id COMMA id RP

   78 PTPRel_stm: PTPRel LP id RP
   79           | PTPRel LP id COMMA id RP

   80 LinRel_stm: LinRel LP id RP
   81           | LinRel LP id COMMA id RP

   82 StopRobot_stm: StopRobot LP id RP

   83 RefRobotAxis_stm: RefRobotAxis LP id RP
   84                 | RefRobotAxis LP id COMMA real RP
   85                 | RefRobotAxis LP id COMMA id RP
   86                 | RefRobotAxis LP id COMMA real COMMA id RP
   87                 | RefRobotAxis LP id COMMA id COMMA id RP

   88 RefRobotAxisAsync_stm: RefRobotAxisAsync LP RP
   89                      | RefRobotAxisAsync LP id RP

   90 MoveRobotAxis_stm: MoveRobotAxis LP id COMMA id RP
   91                  | MoveRobotAxis LP id COMMA real RP
   92                  | MoveRobotAxis LP id COMMA id COMMA id RP

   93 Dyn_stm: Dyn LP id RP

   94 Dynovr_stm: Dynovr LP id RP
   95           | Dynovr LP real RP

   96 Ramp_stm: Ramp LP id RP

   97 Refsys_stm: Refsys LP id RP
   98           | Refsys LP World RP

   99 Tool_stm: Tool LP id RP

  100 WaitTime_stm: WaitTime LP intgr RP
  101             | WaitTime LP flt RP
  102             | WaitTime LP id RP

  103 Stop_stm: Stop LP id RP

  104 Notice_stm: Notice LP id RP
  105           | Notice LP str RP

  106 Warning_stm: Warning LP id RP
  107            | Warning LP str RP

  108 Error_stm: Error LP id RP
  109          | Error LP str RP

  110 Condition: Expression
  111          | ASSIGN_stm

  112 CALL_stm: CALL id LP RP

  113 WAIT_stm: WAIT Condition

  114 IF_stm: IF Condition THEN StatementList ELSEIF_stm
  115       | IF Condition THEN StatementList ELSE_stm
  116       | IF Condition THEN StatementList END_IF
  117       | IF Condition THEN ELSEIF_stm
  118       | IF Condition THEN ELSE_stm
  119       | IF Condition THEN END_IF

  120 ELSEIF_stm: ELSEIF Condition THEN StatementList ELSEIF_stm
  121           | ELSEIF Condition THEN StatementList ELSE_stm
  122           | ELSEIF Condition THEN StatementList END_IF
  123           | ELSEIF Condition THEN ELSEIF_stm
  124           | ELSEIF Condition THEN ELSE_stm
  125           | ELSEIF Condition THEN END_IF

  126 ELSE_stm: ELSE StatementList END_IF
  127         | ELSE END_IF

  128 WHILE_stm: WHILE Condition DO StatementList END_WHILE
  129          | WHILE Condition DO END_WHILE

  130 LOOP_stm: LOOP intgr DO StatementList END_LOOP
  131         | LOOP id DO StatementList END_LOOP
  132         | LOOP intgr DO END_LOOP
  133         | LOOP id DO END_LOOP

  134 RUN_stm: RUN id LP RP

  135 KILL_stm: KILL id LP RP

  136 RETURN_stm: RETURN

  137 GOTO_stm: GOTO id
  138         | IF Condition GOTO id

  139 LABEL_stm: id COLON

  140 DOT_expr: id DOT id

  141 ASSIGN_stm: id ASSIGN Expression
  142           | DOT_expr ASSIGN Expression

  143 Expression: Expression AND Expression
  144           | Expression OR Expression
  145           | Expression XOR Expression
  146           | Expression MUL Expression
  147           | Expression DIV Expression
  148           | Expression PLUS Expression
  149           | Expression MINUS Expression
  150           | Expression EQ Expression
  151           | Expression NE Expression
  152           | Expression LE Expression
  153           | Expression LT Expression
  154           | Expression GE Expression
  155           | Expression GT Expression
  156           | MINUS Expression
  157           | NOT Expression
  158           | LP Expression RP
  159           | LP ASSIGN_stm RP
  160           | DOT_expr
  161           | id
  162           | intgr
  163           | flt
  164           | str
  165           | bl


Terminals, with rules where they appear

$end (0) 0
error (256)
SPACE (258)
COMMENT (259)
str (260) 12 105 107 109 164
bl (261) 13 165
TYPE (262) 6
a1 (263) 27
a2 (264) 27
a3 (265) 27
a4 (266) 27
a5 (267) 27
a6 (268) 27
aux1 (269) 29 30 31 32 33
aux2 (270) 30 31 32 33
aux3 (271) 31 32 33
aux4 (272) 32 33
aux5 (273) 33
x (274) 28 34 35 36
y (275) 28 34 35 36
z (276) 28 34 35 36
a (277) 28 34 35 36
b (278) 28 34 35 36
c (279) 28 34 35 36
mode (280) 28
baseRefSys (281) 35 36
velAxis (282) 37
accAxis (283) 37
decAxis (284) 37
jerkAxis (285) 37
velPath (286) 37
accPath (287) 37
decPath (288) 37
jerkPath (289) 37
velOri (290) 37
accOri (291) 37
decOri (292) 37
jerkOri (293) 37
World (294) 35 98
PTP (295) 72 73
Lin (296) 74 75
Circ (297) 76 77
PTPRel (298) 78 79
LinRel (299) 80 81
StopRobot (300) 82
RefRobotAxis (301) 83 84 85 86 87
RefRobotAxisAsync (302) 88 89
MoveRobotAxis (303) 90 91 92
Dyn (304) 93
Dynovr (305) 94 95
Ramp (306) 96
Refsys (307) 97 98
Tool (308) 99
WaitTime (309) 100 101 102
Stop (310) 103
Notice (311) 104 105
Warning (312) 106 107
Error (313) 108 109
CALL (314) 112
WAIT (315) 113
IF (316) 114 115 116 117 118 119 138
THEN (317) 114 115 116 117 118 119 120 121 122 123 124 125
ELSE (318) 126 127
ELSEIF (319) 120 121 122 123 124 125
END_IF (320) 116 119 122 125 126 127
WHILE (321) 128 129
DO (322) 128 129 130 131 132 133
END_WHILE (323) 128 129
LOOP (324) 130 131 132 133
END_LOOP (325) 130 131 132 133
RUN (326) 134
KILL (327) 135
RETURN (328) 136
GOTO (329) 137 138
intgr (330) 8 10 19 21 28 100 130 132 162
flt (331) 9 11 20 22 101 163
id (332) 6 7 36 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 89
    90 91 92 93 94 96 97 99 102 103 104 106 108 112 131 133 134 135
    137 138 139 140 141 161
ASSIGN (333) 6 141 142
MINUS (334) 10 11 21 22 149 156
LP (335) 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91
    92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109
    112 134 135 158 159
RP (336) 23 24 25 26 34 35 36 37 72 73 74 75 76 77 78 79 80 81 82 83
    84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    104 105 106 107 108 109 112 134 135 158 159
LC (337) 2 3 38 39
RC (338) 2 3 38 39
COMMA (339) 73 75 76 77 79 81 84 85 86 87 90 91 92
COLON (340) 6 139
AND (341) 143
OR (342) 144
XOR (343) 145
MUL (344) 146
DIV (345) 147
PLUS (346) 148
EQ (347) 150
NE (348) 151
LE (349) 152
LT (350) 153
GE (351) 154
GT (352) 155
NOT (353) 157
DOT (354) 140
ERROR (355)
UMINUS (356)


Nonterminals, with rules where they appear

$accept (102)
    on left: 0
Var_Prog (103)
    on left: 1, on right: 0
Var (104)
    on left: 2 3, on right: 1
DefinitionList (105)
    on left: 4 5, on right: 2 4
Definition (106)
    on left: 6, on right: 4 5
type (107)
    on left: 7 8 9 10 11 12 13 14 15 16 17 18, on right: 6
real (108)
    on left: 19 20 21 22, on right: 27 28 29 30 31 32 33 34 35 36 37
    84 86 91 95
axisPos (109)
    on left: 23 24, on right: 14
cartPos (110)
    on left: 25 26, on right: 15
robAxisPos (111)
    on left: 27, on right: 23 24
robCartPos (112)
    on left: 28, on right: 25 26
auxAxisPos (113)
    on left: 29 30 31 32 33, on right: 24 26
cartSys (114)
    on left: 34, on right: 16
cartRefSys (115)
    on left: 35 36, on right: 17
dynamic (116)
    on left: 37, on right: 18
Prog (117)
    on left: 38 39, on right: 1
StatementList (118)
    on left: 40 41, on right: 38 40 114 115 116 120 121 122 126 128
    130 131
Statement (119)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 66 67 68 69 70 71, on right: 40 41
PTP_stm (120)
    on left: 72 73, on right: 42
Lin_stm (121)
    on left: 74 75, on right: 43
Circ_stm (122)
    on left: 76 77, on right: 44
PTPRel_stm (123)
    on left: 78 79, on right: 45
LinRel_stm (124)
    on left: 80 81, on right: 46
StopRobot_stm (125)
    on left: 82, on right: 47
RefRobotAxis_stm (126)
    on left: 83 84 85 86 87, on right: 48
RefRobotAxisAsync_stm (127)
    on left: 88 89, on right: 49
MoveRobotAxis_stm (128)
    on left: 90 91 92, on right: 50
Dyn_stm (129)
    on left: 93, on right: 51
Dynovr_stm (130)
    on left: 94 95, on right: 52
Ramp_stm (131)
    on left: 96, on right: 53
Refsys_stm (132)
    on left: 97 98, on right: 54
Tool_stm (133)
    on left: 99, on right: 55
WaitTime_stm (134)
    on left: 100 101 102, on right: 56
Stop_stm (135)
    on left: 103, on right: 57
Notice_stm (136)
    on left: 104 105, on right: 58
Warning_stm (137)
    on left: 106 107, on right: 59
Error_stm (138)
    on left: 108 109, on right: 60
Condition (139)
    on left: 110 111, on right: 113 114 115 116 117 118 119 120 121
    122 123 124 125 128 129 138
CALL_stm (140)
    on left: 112, on right: 61
WAIT_stm (141)
    on left: 113, on right: 62
IF_stm (142)
    on left: 114 115 116 117 118 119, on right: 63
ELSEIF_stm (143)
    on left: 120 121 122 123 124 125, on right: 114 117 120 123
ELSE_stm (144)
    on left: 126 127, on right: 115 118 121 124
WHILE_stm (145)
    on left: 128 129, on right: 64
LOOP_stm (146)
    on left: 130 131 132 133, on right: 65
RUN_stm (147)
    on left: 134, on right: 66
KILL_stm (148)
    on left: 135, on right: 67
RETURN_stm (149)
    on left: 136, on right: 68
GOTO_stm (150)
    on left: 137 138, on right: 69
LABEL_stm (151)
    on left: 139, on right: 70
DOT_expr (152)
    on left: 140, on right: 142 160
ASSIGN_stm (153)
    on left: 141 142, on right: 71 111 159
Expression (154)
    on left: 143 144 145 146 147 148 149 150 151 152 153 154 155 156
    157 158 159 160 161 162 163 164 165, on right: 110 141 142 143
    144 145 146 147 148 149 150 151 152 153 154 155 156 157 158


State 0

    0 $accept: . Var_Prog $end

    LC  shift, and go to state 1

    Var_Prog  go to state 2
    Var       go to state 3


State 1

    2 Var: LC . DefinitionList RC
    3    | LC . RC

    id  shift, and go to state 4
    RC  shift, and go to state 5

    DefinitionList  go to state 6
    Definition      go to state 7


State 2

    0 $accept: Var_Prog . $end

    $end  shift, and go to state 8


State 3

    1 Var_Prog: Var . Prog

    LC  shift, and go to state 9

    Prog  go to state 10


State 4

    6 Definition: id . COLON TYPE ASSIGN type

    COLON  shift, and go to state 11


State 5

    3 Var: LC RC .

    $default  reduce using rule 3 (Var)


State 6

    2 Var: LC DefinitionList . RC

    RC  shift, and go to state 12


State 7

    4 DefinitionList: Definition . DefinitionList
    5               | Definition .

    id  shift, and go to state 4

    $default  reduce using rule 5 (DefinitionList)

    DefinitionList  go to state 13
    Definition      go to state 7


State 8

    0 $accept: Var_Prog $end .

    $default  accept


State 9

   38 Prog: LC . StatementList RC
   39     | LC . RC

    PTP                shift, and go to state 14
    Lin                shift, and go to state 15
    Circ               shift, and go to state 16
    PTPRel             shift, and go to state 17
    LinRel             shift, and go to state 18
    StopRobot          shift, and go to state 19
    RefRobotAxis       shift, and go to state 20
    RefRobotAxisAsync  shift, and go to state 21
    MoveRobotAxis      shift, and go to state 22
    Dyn                shift, and go to state 23
    Dynovr             shift, and go to state 24
    Ramp               shift, and go to state 25
    Refsys             shift, and go to state 26
    Tool               shift, and go to state 27
    WaitTime           shift, and go to state 28
    Stop               shift, and go to state 29
    Notice             shift, and go to state 30
    Warning            shift, and go to state 31
    Error              shift, and go to state 32
    CALL               shift, and go to state 33
    WAIT               shift, and go to state 34
    IF                 shift, and go to state 35
    WHILE              shift, and go to state 36
    LOOP               shift, and go to state 37
    RUN                shift, and go to state 38
    KILL               shift, and go to state 39
    RETURN             shift, and go to state 40
    GOTO               shift, and go to state 41
    id                 shift, and go to state 42
    RC                 shift, and go to state 43

    StatementList          go to state 44
    Statement              go to state 45
    PTP_stm                go to state 46
    Lin_stm                go to state 47
    Circ_stm               go to state 48
    PTPRel_stm             go to state 49
    LinRel_stm             go to state 50
    StopRobot_stm          go to state 51
    RefRobotAxis_stm       go to state 52
    RefRobotAxisAsync_stm  go to state 53
    MoveRobotAxis_stm      go to state 54
    Dyn_stm                go to state 55
    Dynovr_stm             go to state 56
    Ramp_stm               go to state 57
    Refsys_stm             go to state 58
    Tool_stm               go to state 59
    WaitTime_stm           go to state 60
    Stop_stm               go to state 61
    Notice_stm             go to state 62
    Warning_stm            go to state 63
    Error_stm              go to state 64
    CALL_stm               go to state 65
    WAIT_stm               go to state 66
    IF_stm                 go to state 67
    WHILE_stm              go to state 68
    LOOP_stm               go to state 69
    RUN_stm                go to state 70
    KILL_stm               go to state 71
    RETURN_stm             go to state 72
    GOTO_stm               go to state 73
    LABEL_stm              go to state 74
    DOT_expr               go to state 75
    ASSIGN_stm             go to state 76


State 10

    1 Var_Prog: Var Prog .

    $default  reduce using rule 1 (Var_Prog)


State 11

    6 Definition: id COLON . TYPE ASSIGN type

    TYPE  shift, and go to state 77


State 12

    2 Var: LC DefinitionList RC .

    $default  reduce using rule 2 (Var)


State 13

    4 DefinitionList: Definition DefinitionList .

    $default  reduce using rule 4 (DefinitionList)


State 14

   72 PTP_stm: PTP . LP id RP
   73        | PTP . LP id COMMA id RP

    LP  shift, and go to state 78


State 15

   74 Lin_stm: Lin . LP id RP
   75        | Lin . LP id COMMA id RP

    LP  shift, and go to state 79


State 16

   76 Circ_stm: Circ . LP id COMMA id RP
   77         | Circ . LP id COMMA id COMMA id RP

    LP  shift, and go to state 80


State 17

   78 PTPRel_stm: PTPRel . LP id RP
   79           | PTPRel . LP id COMMA id RP

    LP  shift, and go to state 81


State 18

   80 LinRel_stm: LinRel . LP id RP
   81           | LinRel . LP id COMMA id RP

    LP  shift, and go to state 82


State 19

   82 StopRobot_stm: StopRobot . LP id RP

    LP  shift, and go to state 83


State 20

   83 RefRobotAxis_stm: RefRobotAxis . LP id RP
   84                 | RefRobotAxis . LP id COMMA real RP
   85                 | RefRobotAxis . LP id COMMA id RP
   86                 | RefRobotAxis . LP id COMMA real COMMA id RP
   87                 | RefRobotAxis . LP id COMMA id COMMA id RP

    LP  shift, and go to state 84


State 21

   88 RefRobotAxisAsync_stm: RefRobotAxisAsync . LP RP
   89                      | RefRobotAxisAsync . LP id RP

    LP  shift, and go to state 85


State 22

   90 MoveRobotAxis_stm: MoveRobotAxis . LP id COMMA id RP
   91                  | MoveRobotAxis . LP id COMMA real RP
   92                  | MoveRobotAxis . LP id COMMA id COMMA id RP

    LP  shift, and go to state 86


State 23

   93 Dyn_stm: Dyn . LP id RP

    LP  shift, and go to state 87


State 24

   94 Dynovr_stm: Dynovr . LP id RP
   95           | Dynovr . LP real RP

    LP  shift, and go to state 88


State 25

   96 Ramp_stm: Ramp . LP id RP

    LP  shift, and go to state 89


State 26

   97 Refsys_stm: Refsys . LP id RP
   98           | Refsys . LP World RP

    LP  shift, and go to state 90


State 27

   99 Tool_stm: Tool . LP id RP

    LP  shift, and go to state 91


State 28

  100 WaitTime_stm: WaitTime . LP intgr RP
  101             | WaitTime . LP flt RP
  102             | WaitTime . LP id RP

    LP  shift, and go to state 92


State 29

  103 Stop_stm: Stop . LP id RP

    LP  shift, and go to state 93


State 30

  104 Notice_stm: Notice . LP id RP
  105           | Notice . LP str RP

    LP  shift, and go to state 94


State 31

  106 Warning_stm: Warning . LP id RP
  107            | Warning . LP str RP

    LP  shift, and go to state 95


State 32

  108 Error_stm: Error . LP id RP
  109          | Error . LP str RP

    LP  shift, and go to state 96


State 33

  112 CALL_stm: CALL . id LP RP

    id  shift, and go to state 97


State 34

  113 WAIT_stm: WAIT . Condition

    str    shift, and go to state 98
    bl     shift, and go to state 99
    intgr  shift, and go to state 100
    flt    shift, and go to state 101
    id     shift, and go to state 102
    MINUS  shift, and go to state 103
    LP     shift, and go to state 104
    NOT    shift, and go to state 105

    Condition   go to state 106
    DOT_expr    go to state 107
    ASSIGN_stm  go to state 108
    Expression  go to state 109


State 35

  114 IF_stm: IF . Condition THEN StatementList ELSEIF_stm
  115       | IF . Condition THEN StatementList ELSE_stm
  116       | IF . Condition THEN StatementList END_IF
  117       | IF . Condition THEN ELSEIF_stm
  118       | IF . Condition THEN ELSE_stm
  119       | IF . Condition THEN END_IF
  138 GOTO_stm: IF . Condition GOTO id

    str    shift, and go to state 98
    bl     shift, and go to state 99
    intgr  shift, and go to state 100
    flt    shift, and go to state 101
    id     shift, and go to state 102
    MINUS  shift, and go to state 103
    LP     shift, and go to state 104
    NOT    shift, and go to state 105

    Condition   go to state 110
    DOT_expr    go to state 107
    ASSIGN_stm  go to state 108
    Expression  go to state 109


State 36

  128 WHILE_stm: WHILE . Condition DO StatementList END_WHILE
  129          | WHILE . Condition DO END_WHILE

    str    shift, and go to state 98
    bl     shift, and go to state 99
    intgr  shift, and go to state 100
    flt    shift, and go to state 101
    id     shift, and go to state 102
    MINUS  shift, and go to state 103
    LP     shift, and go to state 104
    NOT    shift, and go to state 105

    Condition   go to state 111
    DOT_expr    go to state 107
    ASSIGN_stm  go to state 108
    Expression  go to state 109


State 37

  130 LOOP_stm: LOOP . intgr DO StatementList END_LOOP
  131         | LOOP . id DO StatementList END_LOOP
  132         | LOOP . intgr DO END_LOOP
  133         | LOOP . id DO END_LOOP

    intgr  shift, and go to state 112
    id     shift, and go to state 113


State 38

  134 RUN_stm: RUN . id LP RP

    id  shift, and go to state 114


State 39

  135 KILL_stm: KILL . id LP RP

    id  shift, and go to state 115


State 40

  136 RETURN_stm: RETURN .

    $default  reduce using rule 136 (RETURN_stm)


State 41

  137 GOTO_stm: GOTO . id

    id  shift, and go to state 116


State 42

  139 LABEL_stm: id . COLON
  140 DOT_expr: id . DOT id
  141 ASSIGN_stm: id . ASSIGN Expression

    ASSIGN  shift, and go to state 117
    COLON   shift, and go to state 118
    DOT     shift, and go to state 119


State 43

   39 Prog: LC RC .

    $default  reduce using rule 39 (Prog)


State 44

   38 Prog: LC StatementList . RC

    RC  shift, and go to state 120


State 45

   40 StatementList: Statement . StatementList
   41              | Statement .

    PTP                shift, and go to state 14
    Lin                shift, and go to state 15
    Circ               shift, and go to state 16
    PTPRel             shift, and go to state 17
    LinRel             shift, and go to state 18
    StopRobot          shift, and go to state 19
    RefRobotAxis       shift, and go to state 20
    RefRobotAxisAsync  shift, and go to state 21
    MoveRobotAxis      shift, and go to state 22
    Dyn                shift, and go to state 23
    Dynovr             shift, and go to state 24
    Ramp               shift, and go to state 25
    Refsys             shift, and go to state 26
    Tool               shift, and go to state 27
    WaitTime           shift, and go to state 28
    Stop               shift, and go to state 29
    Notice             shift, and go to state 30
    Warning            shift, and go to state 31
    Error              shift, and go to state 32
    CALL               shift, and go to state 33
    WAIT               shift, and go to state 34
    IF                 shift, and go to state 35
    WHILE              shift, and go to state 36
    LOOP               shift, and go to state 37
    RUN                shift, and go to state 38
    KILL               shift, and go to state 39
    RETURN             shift, and go to state 40
    GOTO               shift, and go to state 41
    id                 shift, and go to state 42

    $default  reduce using rule 41 (StatementList)

    StatementList          go to state 121
    Statement              go to state 45
    PTP_stm                go to state 46
    Lin_stm                go to state 47
    Circ_stm               go to state 48
    PTPRel_stm             go to state 49
    LinRel_stm             go to state 50
    StopRobot_stm          go to state 51
    RefRobotAxis_stm       go to state 52
    RefRobotAxisAsync_stm  go to state 53
    MoveRobotAxis_stm      go to state 54
    Dyn_stm                go to state 55
    Dynovr_stm             go to state 56
    Ramp_stm               go to state 57
    Refsys_stm             go to state 58
    Tool_stm               go to state 59
    WaitTime_stm           go to state 60
    Stop_stm               go to state 61
    Notice_stm             go to state 62
    Warning_stm            go to state 63
    Error_stm              go to state 64
    CALL_stm               go to state 65
    WAIT_stm               go to state 66
    IF_stm                 go to state 67
    WHILE_stm              go to state 68
    LOOP_stm               go to state 69
    RUN_stm                go to state 70
    KILL_stm               go to state 71
    RETURN_stm             go to state 72
    GOTO_stm               go to state 73
    LABEL_stm              go to state 74
    DOT_expr               go to state 75
    ASSIGN_stm             go to state 76


State 46

   42 Statement: PTP_stm .

    $default  reduce using rule 42 (Statement)


State 47

   43 Statement: Lin_stm .

    $default  reduce using rule 43 (Statement)


State 48

   44 Statement: Circ_stm .

    $default  reduce using rule 44 (Statement)


State 49

   45 Statement: PTPRel_stm .

    $default  reduce using rule 45 (Statement)


State 50

   46 Statement: LinRel_stm .

    $default  reduce using rule 46 (Statement)


State 51

   47 Statement: StopRobot_stm .

    $default  reduce using rule 47 (Statement)


State 52

   48 Statement: RefRobotAxis_stm .

    $default  reduce using rule 48 (Statement)


State 53

   49 Statement: RefRobotAxisAsync_stm .

    $default  reduce using rule 49 (Statement)


State 54

   50 Statement: MoveRobotAxis_stm .

    $default  reduce using rule 50 (Statement)


State 55

   51 Statement: Dyn_stm .

    $default  reduce using rule 51 (Statement)


State 56

   52 Statement: Dynovr_stm .

    $default  reduce using rule 52 (Statement)


State 57

   53 Statement: Ramp_stm .

    $default  reduce using rule 53 (Statement)


State 58

   54 Statement: Refsys_stm .

    $default  reduce using rule 54 (Statement)


State 59

   55 Statement: Tool_stm .

    $default  reduce using rule 55 (Statement)


State 60

   56 Statement: WaitTime_stm .

    $default  reduce using rule 56 (Statement)


State 61

   57 Statement: Stop_stm .

    $default  reduce using rule 57 (Statement)


State 62

   58 Statement: Notice_stm .

    $default  reduce using rule 58 (Statement)


State 63

   59 Statement: Warning_stm .

    $default  reduce using rule 59 (Statement)


State 64

   60 Statement: Error_stm .

    $default  reduce using rule 60 (Statement)


State 65

   61 Statement: CALL_stm .

    $default  reduce using rule 61 (Statement)


State 66

   62 Statement: WAIT_stm .

    $default  reduce using rule 62 (Statement)


State 67

   63 Statement: IF_stm .

    $default  reduce using rule 63 (Statement)


State 68

   64 Statement: WHILE_stm .

    $default  reduce using rule 64 (Statement)


State 69

   65 Statement: LOOP_stm .

    $default  reduce using rule 65 (Statement)


State 70

   66 Statement: RUN_stm .

    $default  reduce using rule 66 (Statement)


State 71

   67 Statement: KILL_stm .

    $default  reduce using rule 67 (Statement)


State 72

   68 Statement: RETURN_stm .

    $default  reduce using rule 68 (Statement)


State 73

   69 Statement: GOTO_stm .

    $default  reduce using rule 69 (Statement)


State 74

   70 Statement: LABEL_stm .

    $default  reduce using rule 70 (Statement)


State 75

  142 ASSIGN_stm: DOT_expr . ASSIGN Expression

    ASSIGN  shift, and go to state 122


State 76

   71 Statement: ASSIGN_stm .

    $default  reduce using rule 71 (Statement)


State 77

    6 Definition: id COLON TYPE . ASSIGN type

    ASSIGN  shift, and go to state 123


State 78

   72 PTP_stm: PTP LP . id RP
   73        | PTP LP . id COMMA id RP

    id  shift, and go to state 124


State 79

   74 Lin_stm: Lin LP . id RP
   75        | Lin LP . id COMMA id RP

    id  shift, and go to state 125


State 80

   76 Circ_stm: Circ LP . id COMMA id RP
   77         | Circ LP . id COMMA id COMMA id RP

    id  shift, and go to state 126


State 81

   78 PTPRel_stm: PTPRel LP . id RP
   79           | PTPRel LP . id COMMA id RP

    id  shift, and go to state 127


State 82

   80 LinRel_stm: LinRel LP . id RP
   81           | LinRel LP . id COMMA id RP

    id  shift, and go to state 128


State 83

   82 StopRobot_stm: StopRobot LP . id RP

    id  shift, and go to state 129


State 84

   83 RefRobotAxis_stm: RefRobotAxis LP . id RP
   84                 | RefRobotAxis LP . id COMMA real RP
   85                 | RefRobotAxis LP . id COMMA id RP
   86                 | RefRobotAxis LP . id COMMA real COMMA id RP
   87                 | RefRobotAxis LP . id COMMA id COMMA id RP

    id  shift, and go to state 130


State 85

   88 RefRobotAxisAsync_stm: RefRobotAxisAsync LP . RP
   89                      | RefRobotAxisAsync LP . id RP

    id  shift, and go to state 131
    RP  shift, and go to state 132


State 86

   90 MoveRobotAxis_stm: MoveRobotAxis LP . id COMMA id RP
   91                  | MoveRobotAxis LP . id COMMA real RP
   92                  | MoveRobotAxis LP . id COMMA id COMMA id RP

    id  shift, and go to state 133


State 87

   93 Dyn_stm: Dyn LP . id RP

    id  shift, and go to state 134


State 88

   94 Dynovr_stm: Dynovr LP . id RP
   95           | Dynovr LP . real RP

    intgr  shift, and go to state 135
    flt    shift, and go to state 136
    id     shift, and go to state 137
    MINUS  shift, and go to state 138

    real  go to state 139


State 89

   96 Ramp_stm: Ramp LP . id RP

    id  shift, and go to state 140


State 90

   97 Refsys_stm: Refsys LP . id RP
   98           | Refsys LP . World RP

    World  shift, and go to state 141
    id     shift, and go to state 142


State 91

   99 Tool_stm: Tool LP . id RP

    id  shift, and go to state 143


State 92

  100 WaitTime_stm: WaitTime LP . intgr RP
  101             | WaitTime LP . flt RP
  102             | WaitTime LP . id RP

    intgr  shift, and go to state 144
    flt    shift, and go to state 145
    id     shift, and go to state 146


State 93

  103 Stop_stm: Stop LP . id RP

    id  shift, and go to state 147


State 94

  104 Notice_stm: Notice LP . id RP
  105           | Notice LP . str RP

    str  shift, and go to state 148
    id   shift, and go to state 149


State 95

  106 Warning_stm: Warning LP . id RP
  107            | Warning LP . str RP

    str  shift, and go to state 150
    id   shift, and go to state 151


State 96

  108 Error_stm: Error LP . id RP
  109          | Error LP . str RP

    str  shift, and go to state 152
    id   shift, and go to state 153


State 97

  112 CALL_stm: CALL id . LP RP

    LP  shift, and go to state 154


State 98

  164 Expression: str .

    $default  reduce using rule 164 (Expression)


State 99

  165 Expression: bl .

    $default  reduce using rule 165 (Expression)


State 100

  162 Expression: intgr .

    $default  reduce using rule 162 (Expression)


State 101

  163 Expression: flt .

    $default  reduce using rule 163 (Expression)


State 102

  140 DOT_expr: id . DOT id
  141 ASSIGN_stm: id . ASSIGN Expression
  161 Expression: id .

    ASSIGN  shift, and go to state 117
    DOT     shift, and go to state 119

    $default  reduce using rule 161 (Expression)


State 103

  156 Expression: MINUS . Expression

    str    shift, and go to state 98
    bl     shift, and go to state 99
    intgr  shift, and go to state 100
    flt    shift, and go to state 101
    id     shift, and go to state 155
    MINUS  shift, and go to state 103
    LP     shift, and go to state 104
    NOT    shift, and go to state 105

    DOT_expr    go to state 156
    Expression  go to state 157


State 104

  158 Expression: LP . Expression RP
  159           | LP . ASSIGN_stm RP

    str    shift, and go to state 98
    bl     shift, and go to state 99
    intgr  shift, and go to state 100
    flt    shift, and go to state 101
    id     shift, and go to state 102
    MINUS  shift, and go to state 103
    LP     shift, and go to state 104
    NOT    shift, and go to state 105

    DOT_expr    go to state 107
    ASSIGN_stm  go to state 158
    Expression  go to state 159


State 105

  157 Expression: NOT . Expression

    str    shift, and go to state 98
    bl     shift, and go to state 99
    intgr  shift, and go to state 100
    flt    shift, and go to state 101
    id     shift, and go to state 155
    MINUS  shift, and go to state 103
    LP     shift, and go to state 104
    NOT    shift, and go to state 105

    DOT_expr    go to state 156
    Expression  go to state 160


State 106

  113 WAIT_stm: WAIT Condition .

    $default  reduce using rule 113 (WAIT_stm)


State 107

  142 ASSIGN_stm: DOT_expr . ASSIGN Expression
  160 Expression: DOT_expr .

    ASSIGN  shift, and go to state 122

    $default  reduce using rule 160 (Expression)


State 108

  111 Condition: ASSIGN_stm .

    $default  reduce using rule 111 (Condition)


State 109
